log/build_2025-01-08_22-28-05/solver/stdout_stderr.log
running egg_info
writing ../build/solver/solver.egg-info/PKG-INFO
writing dependency_links to ../build/solver/solver.egg-info/dependency_links.txt
writing entry points to ../build/solver/solver.egg-info/entry_points.txt
writing requirements to ../build/solver/solver.egg-info/requires.txt
writing top-level names to ../build/solver/solver.egg-info/top_level.txt
reading manifest file '../build/solver/solver.egg-info/SOURCES.txt'
writing manifest file '../build/solver/solver.egg-info/SOURCES.txt'
running build
running build_py
copying solver/challenge.py -> /home/developer/ros2_ws/src/build/solver/build/lib/solver
running install
running install_lib
copying /home/developer/ros2_ws/src/build/solver/build/lib/solver/challenge.py -> /home/developer/ros2_ws/src/install/solver/lib/python3.10/site-packages/solver
byte-compiling /home/developer/ros2_ws/src/install/solver/lib/python3.10/site-packages/solver/challenge.py to challenge.cpython-310.pyc
  File "/home/developer/ros2_ws/src/install/solver/lib/python3.10/site-packages/solver/challenge.py", line 143
    a_hor = -4.163469105855614, b_hor = 75.2155798055519
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

running install_data
running install_egg_info
removing '/home/developer/ros2_ws/src/install/solver/lib/python3.10/site-packages/solver-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../build/solver/solver.egg-info to /home/developer/ros2_ws/src/install/solver/lib/python3.10/site-packages/solver-0.0.0-py3.10.egg-info
running install_scripts
Installing challenge script to /home/developer/ros2_ws/src/install/solver/lib/solver
writing list of installed files to '/home/developer/ros2_ws/src/build/solver/install.log'
